# Cadence

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
cadence/: config.py  main.py
cadence-ui/: index.html  package-lock.json  package.json  vite.config.js
cadence-ui/public/: benchmark_prompts.json
cadence-ui/src/: App.jsx  api.js  index.css  store.js  uid.js
cadence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cadence/agent/: __init__.py  graph.py  test_graph.py
cadence/analysis/: benchmark_examples.py  benchmark_profiles.py  build_inspiration_profiles.py  inspiration_profiles.json  midi_benchmark.py  rsong_to_midi.py  test_benchmark_examples.py  test_benchmark_profiles.py  test_instrument_coherence.py  test_rsong_to_midi.py  test_timbre_library.py
cadence/api/: productions.py
cadence/instruments/: __init__.py  arp_synth.py  bass.py  chord_stab.py  context.py  countermelody.py  drums.py  echo_synth.py  ensemble_voices.py  fx_riser.py  melody_inst.py  pad_inst.py  perc_aux.py  registry.py  synth_pluck.py
cadence/music/: archetype_diversity.py  arp_patterns.py  composition_archetypes.py  creative_brief.py  creative_variation.py  crescendo.py  development_theory.py  ensemble_policy.py  genre_catalog.py  genre_category_patterns.py  humanize.py  (+100 more)
docs/: IMPROVEMENT_PLAN.md
output/: cadence_game_aggressive_20260529_002031.rsong  cadence_game_aggressive_20260529_112523.rsong  cadence_game_dark,_aggres_20260529_001600.rsong  cadence_game_dark_and_agg_20260529_001629.rsong  cadence_game_energetic_20260529_001638.rsong
(+75 files in other folders)
